Favicon and main home page update

--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
 <body>
     <h1>Games With Tony<img src="images/avatar.png" class="avatar" /></h1>
     <h2>Online Helpers</h2>
-    <p><a href="/onmars">On Mars: Pathfinder and Lacerda Solo Helper</a></p>
+    <p><a href="/eliza">Brass: Birmingham Online Solo Opponents (beta)</a></p>
     <p><a href="/kanbanev">Kanban EV Solo Helper</a></p>
+    <p><a href="/onmars">On Mars: Pathfinder and Lacerda Solo Helper</a></p>
+    <p><a href="/mc">Marvel Champions: Digital Hit Points and Status Dials</a></p>
     <p><a href="/nemoswar">Nemo's War: Online Dice Roller</a></p>
     <p><a href="/nemoswarcalc">Nemo's War: Score Calculator</a></p>
-    <p><a href="/eliza">Brass: Birmingham Online Solo Opponents (beta)</a></p>
+    
     <h2>Solo Modes</h2>
     <p><a href="https://boardgamegeek.com/filepage/211160/pathfinder-unofficial-mars-solo-mode-w-curiosity-s">Pathfinder - An Unofficial On Mars Solo Mode (w/ Curiosity Solo Campaign)</a></p>
     <p><a href="https://boardgamegeek.com/filepage/209734/eliza-brass-birmingham-solo-mode-w-mechanis-solo-c">Eliza - A Brass: Birmingham Solo Mode (w/ Mechanis Solo Campaign)</a></p>
