Make toggle a bit more obvious

--- a/mc/index.html
+++ b/mc/index.html
@@ -48,7 +48,7 @@
         </section>
 
         <section class="show-toggle-edit" v-if="isEditing">
-            <label><input type="checkbox" v-model="showToggleButtons" />Show Toggle Buttons on Main Page</label>
+            <label><input type="checkbox" v-model="showToggleButtons" />Show Status Toggles on Main Page</label>
         </section>
 
         <section class="character-edit" v-for="(character, index) in characters" v-if="isEditing">
