--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <p><a href="/eliza">Brass: Birmingham Online Solo Opponents (beta)</a></p>
     <p><a href="/kanbanev">Kanban EV Solo Helper</a></p>
     <p><a href="/onmars">On Mars: Pathfinder and Lacerda Solo Helper</a></p>
-    <p><a href="/mc">Marvel Champions: Digital Hit Points and Status Dials</a></p>
+    <p><a href="/mc">Marvel Champions: Digital Hit Points, Threat Tracking, and Status Cards</a></p>
     <p><a href="/nemoswar">Nemo's War: Online Dice Roller</a></p>
     <p><a href="/nemoswarcalc">Nemo's War: Score Calculator</a></p>
     
