--- a/mc/index.html
+++ b/mc/index.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Exo+2&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <title>Marvel Champions: Digital Hit Point Dials</title>
+    <title>Marvel Champions: Digital Hit Point Dials and Threat Tracking</title>
 </head>
 <body>
     <main id="mc">
