--- a/mc/index.html
+++ b/mc/index.html
@@ -106,8 +106,8 @@
                     <option value="3">3</option>
                     <option value="4">4</option>
                 </select>
+                <br /><em style="font-size: 0.9rem;">(Note: This is needed to calculate threat.)</em>
             </section>
-            <br /><em>(Note: This is needed to calculate threat.)</em>
             <p>WARNING: The below list may provide spoilers.</p>
             <h2>Heroes</h2>
             <div class="character-edit-buttons">
