--- a/mc/index.html
+++ b/mc/index.html
@@ -82,7 +82,7 @@
         </section>
 
         <section class="hit-point-buttons edit-buttons" v-if="pageState === 1">
-            <a href="#" v-on:click="showOfficialList($event)">+ Add From Official List</a>
+            <a href="#" v-on:click="showOfficialList($event)">+ Add From List</a>
         </section>
 
         <section class="hit-point-buttons edit-buttons" v-if="pageState === 1">
