--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Games With Tony</title>
 </head>
 <body>
-    <h1>Games With Tony<img src="images/avatar.png" class="avatar" /></h1>
+    <h1>Games With Tony<img src="images/cardsavatar.png" class="avatar" /></h1>
     <h2>Online Helpers</h2>
     <p><a href="/eliza">Brass: Birmingham Online Solo Opponents (beta)</a></p>
     <p><a href="/kanbanev">Kanban EV Solo Helper</a></p>
